[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "langchain-goodsender"
version = "0.1.0"
description = "LangChain integration for GoodSender — transactional email API with consent management"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "Joy Labs Ventures" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Email",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["langchain", "goodsender", "email", "transactional", "consent", "ai", "agent"]
dependencies = [
    "langchain-core>=0.3.0",
    "httpx>=0.25.0",
    "pydantic>=2.0",
]

[project.urls]
Homepage = "https://goodsender.com"
Documentation = "https://goodsender.com/docs/api-reference"
Repository = "https://github.com/good-sender/langchain-goodsender"

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "respx>=0.21",
    "langchain-tests>=0.3.0",
]

[tool.setuptools.packages.find]
include = ["langchain_goodsender*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
